# warp_expirement

./: .env  .gitignore  Cargo.toml  README.md  TODO.md
client/: dashboard.html  login.html  registration.html
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.vue  config.js  router.js
frontend/src/components/: HelloWorld.vue  Navbar.vue
frontend/src/views/: About.vue  Authentication.vue  Home.vue  Registration.vue
migrations/2018-07-21-140833_create_users/: up.sql
src/: main.rs  schema.rs
src/model/: user.rs
src/repositery/: user.rs
