[package]
name = "forum"
version = "0.1.0"
authors = ["EloD10 <elo210@outlook.fr>"]

[dependencies]
bcrypt = "0.2.0"
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "1.3.2", features = ["postgres", "chrono"] }
dotenv = "0.13.0"
jsonwebtoken = { git = "https://github.com/Keats/jsonwebtoken.git", rev = "126ee4b1a339a915e9e353dc5278a20de432ad00" }
log = "0.4"
pretty_env_logger = "0.2.4"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0"
warp = "0.1.1"
